--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </div>
 
 <div class="mid">
-    <video src="./3209298-uhd_3840_2160_25fps.mp4" controls autoplay muted width="500px" height="200px">
+    <video src="13103221_2160_3840_30fps.mp4" controls autoplay muted width="500px" height="200px">
 
     </video><br><br><br><br><br>
     <img src="./pexels-photo-1438081.jpeg" alt=""width="150px" height="100px">
