--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 </div>
 
 <div class="mid">
+    <img src="./back.jfif" alt="">
     <video src="13103221_2160_3840_30fps.mp4" controls autoplay muted width="500px" height="200px">
 
     </video><br><br><br><br><br>
